--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+      <meta charset="UTF-8">
+      <meta name="description" content="ECAT Aggregate Calculator - Calculate your UET Lahore entry test - ECAT aggregate score based on Matric, Intermediate, and Entry Test results.">
+      <meta property="og:title" content="ECAT Aggregate Calculator">
+      <meta property="og:description" content="Calculate your UET Lahore entry test - ECAT aggregate score with this easy-to-use tool.">
+      <meta property="og:url" content="https://ecat-aggregate.vercel.app">
+      <title>ECAT Aggregate Calculator</title>
   </head>
   <body>
     <div id="root"></div>
