--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+    name="description"
+    content="Looking to calculate your ECAT (Engineering College Admission Test) score? Our ECAT Aggregate Calculator helps you quickly compute your ECAT result by combining your Matric, Intermediate, and Entry Test marks. Whether you're preparing for the ECAT 2025 or want to estimate your UET Lahore ECAT merit, this tool provides accurate results for all engineering entry tests. Discover how to calculate your ECAT merit and boost your chances of admission to top engineering universities like UET Lahore. Start calculating your ECAT aggregate today!"
+  />
+  <meta name="keywords" content="engineering entry test, how to calculate ecat result, ecat aggregate calculator, uet lahore, ecat merit, ecat 2025" />
+  <meta name="author" content="AW X DEV" />
       <meta charset="UTF-8">
       <meta name="description" content="ECAT Aggregate Calculator - Calculate your UET Lahore entry test - ECAT aggregate score based on Matric, Intermediate, and Entry Test results.">
       <meta property="og:title" content="ECAT Aggregate Calculator">
       <meta property="og:description" content="Calculate your UET Lahore entry test - ECAT aggregate score with this easy-to-use tool.">
       <meta property="og:url" content="https://ecat-aggregate.vercel.app">
+
       <title>ECAT Aggregate Calculator</title>
   </head>
   <body>
