google meta tag

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <meta property="og:title" content="ECAT Aggregate Calculator">
       <meta property="og:description" content="Calculate your UET Lahore entry test - ECAT aggregate score with this easy-to-use tool.">
       <meta property="og:url" content="https://ecat-aggregate.vercel.app">
+      <meta name="google-site-verification" content="W9LU1Ok4hY1qmBrB3QIcF81w3xpbLKL6lzZpV5hguF8" />
 
       <title>ECAT Aggregate Calculator</title>
   </head>
