--- a/index.html
+++ b/index.html
@@ -17,12 +17,11 @@
       <meta property="og:description" content="Calculate your UET Lahore entry test - ECAT aggregate score with this easy-to-use tool.">
       <meta property="og:url" content="https://ecat-aggregate.vercel.app">
       <meta name="google-site-verification" content="W9LU1Ok4hY1qmBrB3QIcF81w3xpbLKL6lzZpV5hguF8" />
-
+      <meta name="google-adsense-account" content="ca-pub-5587701620019175">
       <title>ECAT Aggregate Calculator - Calculate UET Lahore ECAT Scores</title>
       <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-HCL9P0C80G" 
-async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5587701620019175"
-crossorigin="anonymous"
+    
 ></script>
 <script>
   window.dataLayer = window.dataLayer || [];
